# storm-default-config

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  bootstrap  configure.ac  storm-pre-assembled-configuration.spec.in  storm-utility.spec.in
etc/: EMI_1_repos_install  Makefile.am
etc/siteinfo/: Makefile.am  storm-groups.conf  storm-users.conf  storm-wn-list.conf  storm.def  storm.def.template.in
etc/siteinfo/services/: Makefile.am  ig-se_storm_backend  ig-se_storm_frontend  se_storm_backend  se_storm_frontend
etc/siteinfo/vo.d/: Makefile.am  dteam  infngrid  ops  testers.eu-emi.eu
